[gd_scene load_steps=9 format=2]

[ext_resource path="res://Game/UI/UiTemplate.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/Shop/ShopTemplate.gd" type="Script" id=2]
[ext_resource path="res://Assets/Art/Fonts/Space_Grotesk/static/SpaceGrotesk-Light.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Game/Shop/ButtonsForItems.gd" type="Script" id=4]
[ext_resource path="res://Assets/Sound/SoundEffects/coin.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sound/SoundEffects/coin2.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sound/SoundEffects/19001_Bell-Store-Door_PREM11-0941.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 3 )

[node name="ShopTemplate" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Label" parent="." index="0"]
margin_bottom = -212.0
text = "What would you like to buy?"
autowrap = true

[node name="GoldAmount" type="Label" parent="." index="2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 44.0
margin_bottom = -195.0
custom_fonts/font = SubResource( 1 )
text = "Gold: 0"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemsOnSale" type="ScrollContainer" parent="." index="3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 65.0
margin_bottom = -37.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="VBoxContainer" parent="ItemsOnSale" index="0"]
margin_right = 144.0
margin_bottom = 153.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )

[node name="CoinSound1" type="AudioStreamPlayer" parent="." index="4"]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="CoinSound2" type="AudioStreamPlayer" parent="." index="5"]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="EnterShopSound" type="AudioStreamPlayer" parent="." index="6"]
stream = ExtResource( 7 )
volume_db = -10.0
[connection signal="pressed" from="GoBackToMenuButton" to="." method="_on_GoBackToMenuButton_pressed"]
